# demo-review-service

./: .gitignore  Dockerfile  JenkinsfileBuild  README.md  docker-entrypoint.sh  example.env  example_env.ps1  logging.conf  pyproject.toml
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  service.yaml
helm/values/: dev.yaml
review_service/: main.py
