[tool.poetry]
name = "review-service"
version = "0.1.0"
description = "bookstore ratings/reviews service"
authors = ["Ethan Harstad <eharstad@athene.com>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.68.1"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
sqlmodel = "^0.0.4"
elastic-apm = "^6.4.0"
ecs-logging = "^1.0.2"
fastapi-health = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "review_service.main:start"
